<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">AutoResponder</string>
	<string name="msg_body">Text message body (max. 160 chars)</string>
	<string name="confirm">Save message</string>
	<string name="enable_calls">Respond to phone calls</string>
	<string name="enable_texts">Respond to text messages</string>
	<string name="profile">Choose a profile</string>
    <string name="message_saved">Message content saved for profile</string>
    <string name="notification_text">Has sent %d message(s) in this session</string>
	<string-array name="profiles_array">
        <item>Main</item>
        <item>Home</item>
        <item>Work</item>
        <item>Hanging out</item>
        <item>My own 1</item>
        <item>My own 2</item>
        <item>My own 3</item>
    </string-array>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_reset">Reset counter</string>
    <string name="menu_about">About</string>
    
    <!-- About activity -->
    <string name="author">Author: Marcin Świerczyński</string>
    <string name="email">E-mail: marcin@swierczynski.net</string>
    <string name="website">Website:</string>
    <string name="website_address">http://autoresponder.swierczynski.net</string>
    <string name="ok">OK</string>
</resources>
